2apl/resources/tests/Bad/External Prolog Error/error.pl
a(1).
a(X) :-@@@. 
